add basic HTML bones content

--- a/index.html
+++ b/index.html
@@ -6,6 +6,54 @@
         <link rel="stylesheet" href="./style.css">
     </head>
     <body>
-        
+        <div class="header">
+            <h1>Header Logo</h1>
+            <a>Link 1</a>
+            <a>Link 2</a>
+            <a>Link 3</a>
+        </div>
+        <div class="content">
+            <div class="container">
+                <h2>This website is awesome</h2>
+                <p>This website has some subtext that goes here under the main title</p>
+                <button>Sign Up</button>
+                <img>
+            </div>
+            <div class="container">
+                <h3>Some random information.</h3>
+                <div class="image-with-subtext">
+                    <img>
+                    <p>subtext</p>
+                </div>
+                <div class="image-with-subtext">
+                    <img>
+                    <p>subtext</p>
+                </div>
+                <div class="image-with-subtext">
+                    <img>
+                    <p>subtext</p>
+                </div>
+                <div class="image-with-subtext">
+                    <img>
+                    <p>subtext</p>
+                </div>
+            </div>
+            <div class="container">
+                <p>Inspiring quote</p>
+                <p>Quote person</p>
+            </div>
+            <div class="container">
+                <div class="banner">
+                    <h4>Call to action! It's time!</h4>
+                    <p>Sign up for our product by clicking that button right over there!</p>
+                    <button>Sign up</button>
+                </div>
+            </div>
+        </div>
+        <div class="footer">
+            Copyright (c) The Odin Project 2021
+        </div>
     </body>
 </html>
+
+<!--Theme this site around pencils + glasses-->
