--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <body>
         <div class="header">
             <h1>Header Logo</h1>
-            <a>Link 1</a>
-            <a>Link 2</a>
-            <a>Link 3</a>
+            <div class="header-left">
+                <a>Link 1</a>
+                <a>Link 2</a>
+                <a>Link 3</a>
+            </div>
         </div>
         <div class="content">
             <div class="container">
