reach stopping point on container-1

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Landing Page</title>
         <link rel="stylesheet" href="./style.css">
     </head>
+
     <body>
         <div class="header">
             <h1>Header Logo</h1>
@@ -14,14 +15,27 @@
                 <a>Link 3</a>
             </div>
         </div>
+
+
+
         <div class="content">
-            <div class="container">
-                <h2>This website is awesome</h2>
-                <p>This website has some subtext that goes here under the main title</p>
-                <button>Sign Up</button>
-                <img>
+
+
+
+            <div class="container-1">
+                <div class="container-1-left">
+                    <h2>This website is awesome</h2>
+                    <p>This website has some subtext that goes here under the main title</p>
+                    <button class="sign-up-button-1">Sign Up</button>
+                </div>
+                <img class="container-1-right" src="./images/pexels-apunto-group-agencia-de-publicidad-7752790.jpg" alt="woman with pencil on lip - 
+                Photo by Apunto Group Agencia de publicidad from Pexels
+                ">
             </div>
-            <div class="container">
+
+
+
+            <div class="container-2">
                 <h3>Some random information.</h3>
                 <div class="image-with-subtext">
                     <img>
@@ -40,17 +54,23 @@
                     <p>subtext</p>
                 </div>
             </div>
-            <div class="container">
+
+
+
+            <div class="container-3">
                 <p>Inspiring quote</p>
                 <p>Quote person</p>
             </div>
-            <div class="container">
+            <div class="container-4">
                 <div class="banner">
                     <h4>Call to action! It's time!</h4>
                     <p>Sign up for our product by clicking that button right over there!</p>
                     <button>Sign up</button>
                 </div>
             </div>
+
+
+
         </div>
         <div class="footer">
             Copyright (c) The Odin Project 2021
