add content, scale/crop images, complete image row

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <body>
         <div class="header">
-            <h1>Header Logo</h1>
+            <h1>Pencils/Glasses</h1>
             <div class="header-left">
                 <a>Link 1</a>
                 <a>Link 2</a>
@@ -24,8 +24,10 @@
 
             <div class="container-1">
                 <div class="container-1-left">
-                    <h2>This website is awesome</h2>
-                    <p>This website has some subtext that goes here under the main title</p>
+                    <h2>There is no pencil holding unless you are wearing glasses</h2>
+                    <p>In the stock photography universe, one must always wear glasses if also holding a pencil. 
+                        One's status in the world of stock photography plummets without said pairing. 
+                        It is the law of the land. Stay in the know by joining our community.</p>
                     <button class="sign-up-button-1">Sign Up</button>
                 </div>
                 <img class="container-1-right" src="./images/pexels-apunto-group-agencia-de-publicidad-7752790.jpg" alt="woman with pencil on lip - 
@@ -36,31 +38,48 @@
 
 
             <div class="container-2">
-                <h3>Some random information.</h3>
-                <div class="image-with-subtext">
-                    <img>
-                    <p>subtext</p>
-                </div>
-                <div class="image-with-subtext">
-                    <img>
-                    <p>subtext</p>
-                </div>
-                <div class="image-with-subtext">
-                    <img>
-                    <p>subtext</p>
-                </div>
-                <div class="image-with-subtext">
-                    <img>
-                    <p>subtext</p>
+                <h3>Absorb the following instances.</h3>
+                <div class="image-row">
+                    <div class="image-with-subtext">
+                        <img class="image-small"
+                        src="./images/pexels-karolina-grabowska-8547448.jpg" 
+                        alt="woman on a chair holding a pencil with book over her face
+                         - Photo by Karolina Grabowska from Pexels">
+                        <p>This woman is hiding her face in shame because she is holding a pencil while not wearing glasses.</p>
+                    </div>
+                    <div class="image-with-subtext">
+                        <img class="image-small" 
+                        src="images/pexels-andrea-piacquadio-3760532.jpg" 
+                        alt="man drawing on large piec of paper with pencil while wearing glasses
+                         - Photo by Andrea Piacquadio from Pexels">
+                        <p>This man has as many pairs of glasses in storage as he has pencils on his desk because he knows what is at stake.</p>
+                    </div>
+                    <div class="image-with-subtext">
+                        <img class="image-small" 
+                        src="./images/pexels-julia-m-cameron-4144223.jpg" 
+                        alt="woman with pencil speaking to computer screen without wearing glasses
+                         - Photo by Julia M Cameron from Pexels">
+                        <p>This woman pleads for her job while trying to explain why she is not wearing glasses while also holding a pencil.</p>
+                    </div>
+                    <div class="image-with-subtext">
+                        <img class="image-small"
+                        src="./images/pexels-cup-of-couple-6177611.jpg"
+                        alt="pair of glasses and pencils sitting ona table next to a hand
+                         - Photo by Cup of Couple from Pexels">
+                        <p>A pair of glasses and some pencils await proper utilization. Notice the model's face is not in frame.</p>
+                    </div>
                 </div>
             </div>
 
 
 
             <div class="container-3">
-                <p>Inspiring quote</p>
-                <p>Quote person</p>
+                <p>"Thou shalt not hold thine pencil in hand if doth not also wield a healthy pair of bifocal mechanisms on thine face lest ye be cast off like a wretch!"</p>
+                <p>God, allegedly</p>
             </div>
+
+
+
             <div class="container-4">
                 <div class="banner">
                     <h4>Call to action! It's time!</h4>
