finish quote section

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 
 
             <div class="container-3">
-                <p>"Thou shalt not hold thine pencil in hand if doth not also wield a healthy pair of bifocal mechanisms on thine face lest ye be cast off like a wretch!"</p>
-                <p>God, allegedly</p>
+                <p class="quote">Thou shalt not hold thine pencil in hand if doth not also wield bifocal mechanisms on thine face lest ye be cast off like a wretch!</p>
+                <p class="quoter">-God, allegedly</p>
             </div>
 
 
