--- a/index.html
+++ b/index.html
@@ -2,30 +2,24 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Landing Page</title>
+        <title>Glass Pencils</title>
         <link rel="stylesheet" href="./style.css">
     </head>
 
     <body>
         <div class="header">
-            <h1>Pencils/Glasses</h1>
+            <h1>Glass Pencils</h1>
             <div class="header-left">
-                <a>Link 1</a>
-                <a>Link 2</a>
-                <a>Link 3</a>
+                <a>Products</a>
+                <a>Community</a>
+                <a>Careers</a>
             </div>
         </div>
-
-
-
         <div class="content">
-
-
-
             <div class="container-1">
                 <div class="container-1-left">
-                    <h2>There is no pencil holding unless you are wearing glasses</h2>
-                    <p>In the stock photography universe, one must always wear glasses if also holding a pencil. 
+                    <h2>To hold a pencil you must also wear glasses...</h2>
+                    <p>...and vice versa. In the stock photography universe, one must always wear glasses if also holding a pencil. 
                         One's status in the world of stock photography plummets without said pairing. 
                         It is the law of the land. Stay in the know by joining our community.</p>
                     <button class="sign-up-button-1">Sign Up</button>
@@ -34,9 +28,6 @@
                 Photo by Apunto Group Agencia de publicidad from Pexels
                 ">
             </div>
-
-
-
             <div class="container-2">
                 <h3>Absorb the following instances.</h3>
                 <div class="image-row">
@@ -70,31 +61,20 @@
                     </div>
                 </div>
             </div>
-
-
-
             <div class="container-3">
                 <p class="quote">Thou shalt not hold thine pencil in hand if doth not also wield bifocal mechanisms on thine face lest ye be cast off like a wretch!</p>
                 <p class="quoter">-God, allegedly</p>
             </div>
-
-
-
             <div class="container-4">
-                <div class="banner">
-                    <h4>Call to action! It's time!</h4>
-                    <p>Sign up for our product by clicking that button right over there!</p>
-                    <button>Sign up</button>
+                <div>                    
+                    <h4>Pencils down! Time's up!</h4>
+                    <p>Sign up for our coaching program by clicking the button to the right!</p>
                 </div>
+                <button class="sign-up-button-2">Sign up</button>
             </div>
-
-
-
         </div>
         <div class="footer">
-            Copyright (c) The Odin Project 2021
+            Copyright &copy The Odin Project 2021
         </div>
     </body>
 </html>
-
-<!--Theme this site around pencils + glasses-->
